# simple_aws_wrapper

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml  python-publish.yml
src/simple_aws_wrapper/: AWS.py  ResourceManager.py  config.py  resource_manager.py
src/simple_aws_wrapper/const/: regions.py  services.py
src/simple_aws_wrapper/exceptions/: exceptions.py  generic_exception.py
src/simple_aws_wrapper/services/: aws_lambda.py  dynamodb.py  parameter_store.py  s3.py  secrets_manager.py  sqs.py
tests/: test.py  test_dynamodb.py  test_parameter_store.py  test_s3.py  test_secrets_manager.py
tests/resources/: test_binary_file.docx
