[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "simple_aws_wrapper_Trupyx"
version = "0.0.1"
authors = [
    { name="Andrea Trupia", email="andrea.trupia.96@gmail.com"}
]
description = "Implementazione minimale per la gestione delle risorse in cloud di AWS"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]