[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"
[project]
name = "simple_aws_wrapper"
version = "2.12.3"
authors = [
    { name="Andrea Trupia", email="andrea.trupia.96@gmail.com"}
]
description = "Implementazione minimale per la gestione delle risorse in cloud di AWS"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/AndreaTrupia/simple_aws_wrapper"
